# diffusion2D

./: setup.cfg
youssemd_diffusion2d/: diffusion2d.py  output.py
youssemd_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
